<resources>
    <string name="app_name">Be in form!</string>
    <string name="trainingIcon">Training</string>
    <string name="addTrainingIcon">Add train</string>
    <string name="statisticIcon">Planning</string>
    <string name="settingsIcon">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_code_here">Enter code here!</string>
    <string name="submit_button">Submit!</string>
    <string name="own_train_name">Train`s name</string>
    <string name="own_training_description">Train`s description</string>
    <string name="add_train_by_code">Add train by code!</string>
    <string name="code_message">Here will be the message of the chosen training!</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="be_in_form">Be in Form!</string>
    <string name="work_in_progress">Information is pending</string>
    <string name="Information">\n \n \t These are current app settings, which are not final.\n \t They will be added soon.</string>
    <string name="go_back">Go back!</string>
    <string name="information_is_pending">Information is pending…</string>
    <string name="logout_button">Logout</string>
    <string name="surname">Surname!</string>
    <string name="name">name</string>
    <string name="add_own_train">Add Own Train</string>
    <string name="display_user_email">Display User Email</string>
    <string name="display_user_name">Display User Name</string>
    <string name="train_code">Train Code</string>
    <string name="train_name">Train Name</string>
    <string name="author">Author</string>
    <string name="set_time">Set time!</string>
    <string name="default_notification_channel_id">my_channel_id</string>
    <string name="default_notification_channel_name">My Channel</string>
    <string name="default_notification_channel_description">Default Channel for Notifications</string>
    <string name="search">Search</string>
    <string name="display_train_name">Display Train Name</string>
    <string name="display_train_desc_name">Display Train Desc Name</string>
    <string name="other_functions_drawer">Other functions</string>
    <string name="settings_notifications">Еnable or disable notifications</string>
    <string name="set_changes">Set changes!</string>
    <string name="delete_train">Delete train!</string>
    <string name="tg_group_link">Be in form! (support and questions)</string>
    <string name="contact_with_developers">Contacts with developers</string>
    <string name="email">Email:</string>
    <string name="telegram_group">Telegram group (active link):</string>
    <string name="vitaliys13_11_gmail_com">vitaliys13.11@gmail.com</string>
    <string name="vitalii_samsonov">Vitalii Samsonov</string>
    <string name="maxm13052004_gmail_com">maxm13052004@gmail.com</string>
    <string name="maksym_miroshnichenko">Maksym Miroshnichenko</string>
</resources>