<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/name_of_train"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/train_name"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/author_of_train"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/author"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/code_of_train"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_of_train" />

    <TextView
        android:id="@+id/code_of_train"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/train_code"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/author_of_train"
        app:layout_constraintTop_toBottomOf="@+id/name_of_train" />

</androidx.constraintlayout.widget.ConstraintLayout>