<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/ElementTheme">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/train_edit_name"
        android:layout_width="222dp"
        android:layout_height="64dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/display_train_name"
        app:endIconMode="custom"
        app:layout_constraintBottom_toTopOf="@+id/train_edit_desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputTrainName"
            android:layout_width="223dp"
            android:layout_height="58dp"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/train_edit_desc"
        android:layout_width="291dp"
        android:layout_height="208dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="176dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/display_train_desc_name"
        app:endIconMode="custom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/train_edit_name">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputTrainDesc"
            android:layout_width="293dp"
            android:layout_height="201dp"
            android:gravity="top|start"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/set_changes"
        android:layout_width="179dp"
        android:layout_height="65dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="180dp"
        android:layout_marginEnd="16dp"
        android:text="@string/set_changes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/train_edit_desc"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/delete_train"
        android:layout_width="179dp"
        android:layout_height="65dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="180dp"
        android:layout_marginEnd="16dp"
        android:text="@string/delete_train"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/set_changes"
        app:layout_constraintTop_toBottomOf="@+id/train_edit_desc"
        app:layout_constraintVertical_bias="0.007" />

</androidx.constraintlayout.widget.ConstraintLayout>
